Move gnome-version.xml from gnome-desktop to gnome-shell
Hi, let's discuss the possibility of moving gnome-version.xml from gnome-desktop to gnome-shell.
This file kinda sucks and is very confusing to users when it doesn't match the gnome-shell version. The concept of an overall GNOME project version is useful for release team, but it doesn't match anything meaningful to users unless you happen to be using GNOME OS. And doing a bunch of "no changes" releases of gnome-desktop is annoying.
CC for opinions: @ebassi @hadess @alatiera @akitouni @jjardon