info-overview: Load GNOME version from gnome-shell

See https://gitlab.gnome.org/GNOME/gnome-shell/-/issues/5406